    - C-API change: network_mysqld_auth_response_new() needs the server-side capabilities
    - Lua-API added:
      - con.client.challenge (mirrors con.server.challenge)
      - con.client.response.server_capabilties 
      - con.server.challenge.server_capabilities 
  * fixed length of auth-plugin-data in the client auth response packet

0.8.2 - 2011-08-18

  * added support for binlog checksums
  * added support for decoding _all_ datatypes of the RBR protocol
  * added support for OUT params in prepared statements in SPs with MySQL 5.5.x
  * fixed handling of SPs with cursors with MySQL 5.5.x (#61998)
  * fixed handling a "used columns" in the RBR protocol
  * fixed possible crash if run under valgrind
  * fixed crash if --defaults-file doesn't exist (#59790)
  * fixed stripping first characters of log-messages (#58941)
  * fixed mem-leak if connection-pooling is used (#56620)
  * removed bogus timestamp log if state-tracking isn't compiled in
  * removed the "admin" plugin from the list of plugins loaded by default

0.8.1 - 2010-09-13

  * remove unix-socket on shutdown
  * fixed handling of LOAD DATA LOCAL INFILE (#51864)
  * fixed mem-leak on connect for pre-4.1 clients
  * fixed initial error-packet sent to client if all backends are down (#45417)
  * don't try to set a fd-limit if the user didn't explicitly tried to raise it
  * fixed hard-limit in case the fdlimit is set (#48120)
  * fixed traversing a resultset in Lua if it contained NULL fields
  * strip the top_srcdir from the leading source filenames in log-messages

  SQL Tokenizer
  * fixed parsing of literals that start with a digit (#49716)
  * added parsing of floats in scientific notation

  Proxy Plugin
  * fixed query forwarding of time goes backwards (#50806)
  * allow to intercept LOAD DATA and SHOW ERROR commands

  Admin Plugin
  * removed the default values for --admin-username and --admin-password
  * enforce --admin-username, --admin-password and --admin-lua-script to be set